--- a/demo/src/main/resources/templates/component/menu.html
+++ b/demo/src/main/resources/templates/component/menu.html
@@ -9,6 +9,8 @@
             <div class="ts narrow container " style=" padding-left: 25px; ">
 
                 <a class="item" href="/">Home</a>
+                <a class="item" href="/public-api">Public API</a>
+
             </div>
         </div>
         <!-- the end of navigation -->
